added sample tests to try and repro the polygot exception seen intermittently when running tests in parallel